Finalização dos testes de integração